Change email address and update location
Updated email contact and location in the profile section.

--- a/index.html
+++ b/index.html
@@ -264,12 +264,12 @@
     <div class="panel">
       <p style="margin:0 0 12px">I'm currently seeking opportunities in <strong>Data Analytics</strong> and open to discussing data projects, analytics challenges, or collaboration opportunities.</p>
       <div class="row">
-        <a class="btn primary" href="mailto:your.email@example.com">Email Me</a>
+        <a class="btn primary" href="mailto:your.saqerterkawi@gmail.com">Email Me</a>
         <a class="btn ghost" href="https://github.com/pyZac" target="_blank" rel="noopener">GitHub</a>
         <a class="btn ghost" href="https://linkedin.com/in/your-profile" target="_blank" rel="noopener">LinkedIn</a>
       </div>
       <div class="divider"></div>
-      <p class="mono" style="margin:0; color:var(--muted)">📍 Bulgaria • Economics & Business Administration graduate • Transitioning to Data Analytics</p>
+      <p class="mono" style="margin:0; color:var(--muted)">📍 Syria • Economics & Business Administration graduate • Transitioning to Data Analytics</p>
     </div>
 
     <footer class="footer">
