Update tags in index.html for APIs and Integration

--- a/index.html
+++ b/index.html
@@ -215,28 +215,23 @@
           <span class="tag">SQL (MySQL)</span>
           <span class="tag">Data Pipelines</span>
           <span class="tag">ETL Automation</span>
-          <span class="tag">Node.js</span>
         </div>
       </div>
       <div style="margin-bottom:18px">
         <h5 style="margin:0 0 8px; font-size:14px; color:var(--muted)">Analytics & Visualization</h5>
         <div class="list">
           <span class="tag">SQL Analytics</span>
-          <span class="tag">Cohort Analysis</span>
-          <span class="tag">Subscription Metrics</span>
           <span class="tag">Jupyter Notebooks</span>
           <span class="tag">Data Visualization</span>
         </div>
       </div>
       <div>
-        <h5 style="margin:0 0 8px; font-size:14px; color:var(--muted)">NLP & Machine Learning</h5>
+        <h5 style="margin:0 0 8px; font-size:14px; color:var(--muted)">APIs & Integration</h5>
         <div class="list">
-          <span class="tag">Vector Embeddings</span>
-          <span class="tag">Semantic Search</span>
-          <span class="tag">Text Processing</span>
-          <span class="tag">Arabic NLP</span>
-          <span class="tag">OpenAI API</span>
-          <span class="tag">Cosine Similarity</span>
+          <span class="tag">LLM Integration</span>
+          <span class="tag">Telegram Bot API</span>
+          <span class="tag">DB Integration</span>
+          <span class="tag">AutomationScripts</span>
         </div>
       </div>
     </div>
