Remove 'semantic search systems' from description

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div>
         <span class="chip">Data Analytics • ETL Pipelines • NLP</span>
         <h2 class="title">Building data infrastructure and analytics systems</h2>
-        <p class="lead">Specializing in <span class="mono">subscription analytics</span>, <span class="mono">NLP data pipelines</span>, and <span class="mono">semantic search systems</span> — transforming raw data into actionable business insights.</p>
+        <p class="lead">Specializing in <span class="mono">subscription analytics</span>, <span class="mono">NLP data pipelines</span>, and transforming raw data into actionable business insights.</p>
         <div class="cta">
           <a class="btn primary" href="#projects">View Projects</a>
           <a class="btn" href="#contact">Get in Touch</a>
